<resources>
    <string name="app_name">severalActivities</string>

    <string name="TextView">TextView</string>
    <string name="TextView2">TextView</string>

    <string name="button_openDialog">open dialog</string>
    <string name="button_exitApp">exit app</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="cb1">first</string>
    <string name="cb2">second</string>

    <string name="dialogTitle">Warning</string>
    <string name="dialogContent">Are you sure you want to exit?</string>
    <string name="dialogPositive">Yes</string>
    <string name="dialogNegative">No, return</string>

    <string name="Author">Arsenii Hrynchak 303</string>
</resources>